--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "cors": "^2.8.5",
     "nodemailer": "^6.6.2",
     "react": "^17.0.2",
+    "react-crossfade-image": "^1.2.0",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
