--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-crossfade-image": "^1.2.0",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.1.0",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
