--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "swiper": "^8.0.6",
+    "translate": "^1.4.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
