--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-crossfade-image": "^1.2.0",
