--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-crossfade-image": "^1.2.0",
     "react-dom": "^17.0.2",
     "react-paginate": "^8.1.0",
