--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "emailjs-com": "^3.2.0",
+    "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-crossfade-image": "^1.2.0",
