--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "swiper": "^8.1.2",
     "translate": "^1.4.1",
